<resources>
    <string name="app_name" translatable="false">Mapped Database</string>

    <string name="log_in">Log In</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="remember_me">Remember me</string>
    <string name="add_user">Add User</string>
    <string name="back_to_map">Back to Map</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="too_many_network_errors">Too many network errors, return to login screen</string>
    <string name="manage_users">Manage users</string>
    <string name="please_select_location">Please select location</string>
    <string name="logout">Logout</string>
    <string name="manage_locations">Manage locations</string>
    <string name="locations">Locations</string>
    <string name="add_item">Add item</string>
    <string name="add_location">Add Location</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="user_is_admin">User is admin</string>
    <string name="user_is_active">User is active</string>
    <string name="title">Title:</string>
    <string name="count">Count:</string>
    <string name="required">Required</string>
    <string name="location">Location:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="item_added_successfully">Item added successfully</string>
    <string name="error_adding_item">Error adding item: %1$s</string>
    <string name="item_edited_successfully">Item edited successfully</string>
    <string name="error_editing_item">Error editing item: %1$s</string>
    <string name="item_deleted_successfully">Item deleted successfully</string>
    <string name="error_deleting_tem">Error deleting item: %1$s</string>
    <string name="network_error">Network error: %1$s</string>
    <string name="error_getting_items">Error getting items list: %1$s</string>
    <string name="location_added_successfully">Location added successfully</string>
    <string name="error_adding_location">Error adding location: %1$s</string>
    <string name="location_edited_successfully">Location edited successfully</string>
    <string name="error_editing_location">Error editing location: %1$s</string>
    <string name="location_deleted_successfully">Location deleted successfully</string>
    <string name="error_deleting_location">Error deleting location: %1$s</string>
    <string name="error_getting_locations">Error getting locations: %1$s</string>
    <string name="user_added_successfully">User added successfully</string>
    <string name="user_adding_error">User adding error: %1$s</string>
    <string name="user_edited_successfully">User edited successfully</string>
    <string name="user_editing_error">User editing error: %1$s</string>
    <string name="user_deleted_successfully">User deleted successfully</string>
    <string name="user_deleting_error">User deleting error: %1$s</string>
    <string name="error_getting_users">Error getting users: %1$s</string>
    <string name="wrong_password">Wrong password</string>
    <string name="no_such_user">No such user</string>
    <string name="user_is_blocked">This user is blocked</string>
    <string name="unknown_error">Unknown error</string>
    <string name="item_title">Item title:</string>
    <string name="is_item_required">Is item required</string>
    <string name="new_title">New title:</string>
    <string name="new_count">New count:</string>
    <string name="notification_item_added">User %1$s added item \'%2$s\' in amount of %3$s  to location - %4$s</string>
    <string name="notification_item_edited">User %1$s edited item \'%2$s\' in location - %3$s</string>
    <string name="notification_item_deleted">User %1$s deleted item \'%2$s\' in location - %3$s</string>
    <string name="notification_location_added">User %1$s added location - %2$s</string>
    <string name="notification_location_removed">User %1$s deleted location - %2$s</string>
    <string name="notification_location_status">Location %1$s status is now %2$s</string>
    <string name="notification_title_item_added">Item added</string>
    <string name="notification_title_item_edited">Item edited</string>
    <string name="notification_title_item_deleted">Item deleted</string>
    <string name="notification_title_location_added">Location added</string>
    <string name="notification_titile_location_deleted">Location deleted</string>
    <string name="notification_title_location_changed">Location status changed</string>
    <string name="location_status_fine">Green</string>
    <string name="location_status_normal">Yellow</string>
    <string name="location_status_bad">Red</string>
    <string name="show_my_location_on_the_map">Show my location on the map</string>
    <string name="color_markers_on_the_map">Color markers on the map</string>
    <string name="receive_notifications">Receive notifications while active</string>
    <string name="create_account">Create account</string>
    <string name="you_login_as">You login as:</string>
    <string name="settings">Settings</string>
    <string name="change_my_password">Change my password</string>
    <string name="current_password">Current password:</string>
    <string name="new_password">New password:</string>
    <string name="repeat_new_password">Repeat new password:</string>
    <string name="password_changed_successfully">Password changed successfully!</string>
    <string name="password_changing_error">Password changing error - %1$s</string>
</resources>
